# kcptube

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md
.github/workflows/: close_issues.yml
docs/: README.md  README_EN.md  client_server.md  client_server_en.md  client_server_zh-hans.md  custom_ip_mappings_en.md  custom_ip_mappings_zh-hans.md  fec_en.md  fec_zh-hans.md  mtu_en.md  mtu_zh-hans.md  parameters.md  parameters_en.md  parameters_zh-hans.md  relay_mode.md  relay_mode_en.md  relay_mode_zh-hans.md  specific_examples_en.md  specific_examples_zh-hans.md
service/: config_sample_client.conf  config_sample_client_range.conf  config_sample_server.conf  config_sample_server_range.conf  kcptube  kcptubed
sln/: kcptube.sln
sln/kcptube/: kcptube.vcxproj  kcptube.vcxproj.filters
src/: CMakeLists.txt  main.cpp
src/modes/: CMakeLists.txt  client.cpp  client.hpp  relay.cpp  relay.hpp  server.cpp  server.hpp  tester.cpp  tester.hpp
src/networks/: CMakeLists.txt  client.cpp  client.hpp  client_tcp.cpp  client_udp.cpp  connections.cpp  connections.hpp  dns_helper.cpp  dns_helper.hpp  handshake.cpp  handshake.hpp  ikcp.c  ikcp.h  kcp.cpp  kcp.hpp  kcp_updater.cpp  kcp_updater.hpp  mux_tunnel.cpp  mux_tunnel.hpp  relay.cpp  relay.hpp  server.cpp  server.hpp  stun.cpp  stun.hpp
src/shares/: CMakeLists.txt  aead.hpp  aes-256.hpp  configurations.cpp  configurations.hpp  data_operations.cpp  data_operations.hpp  share_defines.cpp  share_defines.hpp  simple_hashing.hpp  string_utils.hpp
